develop/fix: change z-index for search block and rename titles

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,6 +9,7 @@ body{
   height: 500px;
   background-size: cover;
   position: relative;
+  z-index: 5;
 }
 .searchBlock{
   width: 90%;
